<resources>
    <string name="app_name">HomeWorkAndroid</string>
    <string name="exercises001"><b>Exercises001</b></string>
    <string name="exercises001_text"><div text-align="justify">\tРазработайте приложение с одной активностью для расчета треугольника. Используйте <b>LinearLayout</b> с вертикальной ориентацией, три расположенных один под другим элемента <b>TextView</b> для отображения длин сторон треугольника, три кнопки Button для вычисления площади и периметра треугольника, формирования сторон треугольника генератором случайных чисел. Обработчик клика назначайте в файле разметки. Выводите рассчитанные величины в два <b>TextView</b>, размещенные выше кнопок. Конечно же, используйте модель – класс для треугольника.</div></string>
    <string name="sideA">Side A</string>
    <string name="sideB">Side B</string>
    <string name="sideC">Side C</string>
    <string name="area">Area</string>
    <string name="perimetr">Perimetr</string>
    <string name="btn_Area">Calculate Area</string>
    <string name="btn_Perimetr">Calculate Perimetr</string>
    <string name="btn_Generate">Generate Side Values</string>
    <string name="btn_GoToExercises002">Go to Exercises002</string>
    <string name="btn_GoToExercises001">Go to Exercises001</string>
    <string name="exercises002_text"><div text-align="justify">\tРазработайте приложение с одной активностью для ввода данных о покупке. Описание товара должно быть реализовано отдельным классом. Вводите наименование товара, количество, цену единицы товара.  <p>Рассчитайте и выведите сумму к оплате:  <br />Сумма_к_оплате = цена_единицы * количество_товара.<br /> </p> Используйте кнопки <b>Button</b>, элементы ввода <b>EditText</b>, элементы отображения <b>TextView</b> для вывода результата.</div></string>
    <string name="exercises002"><b>Exercises002</b></string>
    <string name="homework001">Home Work 001</string>
    <string name="homework001_text"><div><b>Теоретическая часть</b> \t\n - Краткая характеристика Андроид и разработки под Андроид \t\n - Структура проекта\t\n - Использование файла манифеста для задания иконки приложения \t\n - Разметка интерфейса приложения – контейнер LinearLayout, ориентация элементов вертикальная и горизонтальная \t\n - Идентификаторы элементов интерфейса, элементов строковых ресурсов\t\nПолучение ссылок на элементы интерфейса по идентификаторам этих элементов \t\n - Понятие о dp, sp – пикселях, независимых от разрешения экрана \t\n - Элементы TextView, EditText, Button. \t\n - Реакция на событие клика по кнопке Button – назначение метода-слушателя в разметке, в коде</div></string>
    <string name="btn_ReturnToMain">Return to Main</string>
    <string name="name">Product Name</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="summary">Summary:</string>
    <string name="btn_Summary">Summary</string>
    <string name="mainTitle">Home Work</string>
    <string name="student_text">Работы выполнил ст.гр. ВПУ911 \n Хижняк Павел\nКА\"ШАГ\" г.Донецк</string>
    <string name="btn_GoToHW002">Home Work on 13.03.2022</string>
    <string name="btn_GoToHW001">Home Work on 06.03.2022</string>
    <string name="btn_GoToHW002_Exercises001">Go to Exercises001</string>
    <string name="btn_GoToHW002_Exercises002">Go to Exercises002</string>
    <string name="homework002_text"><div><b>Теоретическая часть</b>
\n•	Всплывающие сообщения <b>Snackbar</b>
\n•	Добавление кнопки (<b>Action</b>) всплывающему сообщению <b>Snackbar</b>, изменение цвета текста на кнопке, цвета и других характеристик текста сообщения
\n•	Работа с изображениями – элемент интерфейса <b>ImageView</b>. Загрузка изображения из ресурсов приложения, из папки <b>assets</b> проекта
\n•	Создание папки <b>assets</b>
\n•	Добавление еще одной активности в проект
\n•	Запуск еще одной активности
\n•	Передача примитивных типов в активность
\n•	Передача ссылочных типов в активность – интерфейсы <b>Parcelable</b>, <b>Serializable</b>
\n•	Получение данных из активности – обработчик события получения данных
\n•	Элементы интерфейса: <b>Switch</b>, <b>RadioGroup</b>, <b>RadioButton</b>
\n•	Слушатели событий клика на уровне радиокнопки
\n•	Слушатель события изменения состояния группы радиокнопок
\n•	Решение проблемы сохранения контекста при повороте экрана
\n<b>Практическая часть</b>
\n\tРазработайте приложение из трех активностей. \nНа главной активности разместите кнопки вызова двух активностей для выполнения обработки по заданию и кнопку выхода из приложения. \nМожет также разместить изображения по теме задания.  При вызове активности сгенерировать объект соответствующего класса – для представления животного, торгового судна. Сгенерированные в главной активности данные и данные, полученные из дополнительных активностей выводить в <b>TextView</b> на главной активности.</div>
</string>
    <string name="HW002_exercises001"><b>Exercises001</b></string>
    <string name="HW002_exercises002"><b>Exercises002</b></string>
    <string name="HW002_exercises001_text">\t<b>Активность 1.</b> В эту активность передавайте данные о домашнем животном: порода, кличка, возраст, вес, фамилия и инициалы владельца, имя файла с изображением в папке <b>assets</b>. А также признаки: специальный уход, специальная диета. Выводите полученные данные в поля <b>EditText</b>, <b>RadioButton</b>, <b>CheckBox</b> изображение по имени файла выводите в <b>ImageView</b>. Реализуйте кнопки увеличения и уменьшения возраста на 1 год, очистки полей ввода, возврата из активности. Возвращать измененные данные на главную активность.  Вводить имя файла с изображением не надо, оно определяется из породы животного. Для изменения породы животного используйте группу из пяти радиокнопок (используйте пять файлов с картинкой животного). Обрабатывайте некорректный ввод, выводите сообщения об ошибках в <b>Snackbar</b>. Передачу объекта выполняйте при помощи объекта с интерфейсом <b>Parcelable</b>.</string>
    <string name="HW002_exercises002_text">\t<b>Активность 2.</b> В эту активность передавайте данные о торговом судне: название, грузоподъемность, имя файла с изображением в папке <b>assets</b>, пункт назначения, тип груза и его вес (например: бокситы, 128 900 тонн или каменный уголь, 110 200 тонн), стоимость 1 тонны груза, признаки – требуется ли специальный пирс для разгрузки, место на якорной стоянке, дозаправка судна топливом. Реализуйте кнопки вычисления стоимости груза, увеличения и уменьшения груза с шагом в 20 тонн, очистки полей ввода, возврата из активности. Возвращать измененные данные на главную активность. Тип судна задавайте при помощи группы радиокнопок (три типа судна – балкер, танкер, контейнеровоз и три фотографии). Вводить имя файла с изображением не надо, оно определяется из типа судна. При изменении типа судна изменяйте картинку или выводите изображение – плейсхолдер. Согласование типа груза и типа судна кодировать не надо, просто вводите корректные данные. При изменении веса груза или цены тонны груза пересчитывайте стоимость груза. Обрабатывайте некорректный ввод, выводите сообщения об ошибках в <b>Snackbar</b>. Передачу объекта выполняйте при помощи объекта с интерфейсом <b>Parcelable</b>.</string>
    <string name="homework002">Home Work 002</string>
    <string name="btn_ReturnToHomeWork002">Return To HomeWork002</string>
    <string name="btn_ReturnToHomeWork003">Return To HomeWork003</string>
    <string name="mni_exit">Exit</string>
    <string name="mni_return">Return</string>
    <string name="btn_back">Back</string>
    <string name="mni_sort_manufacturer">Sort Manufacturer</string>
    <string name="mni_sort_size">Sort Size</string>
    <string name="mni_sort_desc_price">Sort Price</string>
    <string name="btn_GoToHW005_Exercises001">Go to Exercises001</string>
    <string name="btn_GoToHW005_Exercises002">Go to Exercises002</string>
    <string name="HW005_exercises001_text">\t<b>Задача 1.</b> Разработайте приложение для отображения коллекции объектов класса Телевизор с полями для хранения:
        \n•\tпроизводителя и типа телевизора – это одно поле (например, Samsung OLED55DT2020)
        \n•\tимя файла с фотографией телевизора в папке assets
        \n•\tдиагонали экрана в дюймах
        \n•\tразрешения по вертикали в пикселях
        \n•\tразрешения по горизонтали в пикселях
        \n•\tцена в рублях В коллекции объектов определить телевизоры с максимальным разрешением по вертикали. Упорядочить копию коллекции:
        \n•\tпо убыванию цены
        \n•\tпо возрастанию диагонали экрана  Упорядоченные копии выводить в отдельные активности.
        \n\tРеализовать добавление, изменение и удаление элементов коллекции (используйте отдельную активность для редактирования объекта коллекции).
        \n\tИспользуйте <b>GridView</b> для отображения коллекции на главной активности, <b>RecyclerView</b> для вывода упорядоченных копий. Коллекцию хранить в бинарном файле, во внешней памяти. </string>
    <string name="HW005_exercises001"><b>Exercises 001</b></string>
    <string name="HW005_exercises002"><b>Exercises 002</b></string>
    <string name="HW005_exercises002_text">\t<b>Задача 2.</b>
        \n\tРазработайте Андроид-приложение для работы с базой данных, хранящей сведения о книгах <b>books_2.db</b> (база данных в папке CW этого задания).
        \n\tПриложение должно иметь следующий функционал:
        \n•\tВывод на главной активности в <b>ListView</b> данных о книгах – автор, название, год издания, категория. Разместить кнопки (команды меню) для увеличения стоимость книг Абрамяна М.Э. на 15%, уменьшения стоимость книг Абрамяна М.Э. на 15%
        \n•\tВывод списка авторов в отдельной активности – в <b>ListView</b>, используйте <b>SimpleCursorAdapter</b>. По клику на элемент списка вызывать активность редактирования автора, по отдельной кнопке (пункту меню) вызывать активность редактирования автора, но в режиме добавления новой записи
        \n•\tВывод списка категорий в отдельной активности – в <b>ListView</b>, используйте <b>SimpleCursorAdapter</b>
        \n•\tАктивность для добавления или редактирования автора, должен быть пункт меню для завершения активности (для возврата на вызывающую активность)
        \n•\tАктивность вывода фамилии и инициалов авторов и количество книг этих авторов
        \n•\tАктивность сведений о приложении и разработчике Переходы между главной активностью и вспомогательными реализовать при помощи меню. В каждой активности также должна быть реализована команда возврата на главную активность. </string>
    <string name="homework005_text">\t<b>Теоретическая часть</b>
        \n•\tВиджет <b>GridView</b>
        \n•\tХранение данных во внутренней памяти устройства
        \n•\tОсновные методы работы с файлами и каталогами в локальной памяти приложения
        \n•\tХранение данных во внешней памяти устройства
        \n•\tМесто хранения базы данных <b>SQLite</b> в приложении Андроид – внутренняя память устройства, папка <b>assets</b> приложения или внешняя память
        \n•\tВспомогательный класс <b>SQLiteOpenHelper</b> и переопределение его методов в производном классе для организации доступа к базам данных
        \n•\tМетоды для выполнения запросов <b>execSQL()</b>, <b>rowQuery()</b>
        \n•\tМетоды-оболочки запросов выборки данных <b>query()</b>, модификации данных <b>update()</b>, удаления данных <b>delete()</b>, добавления данных <b>insert()</b>
        \n•\tКласс <b>ContentValues</b> и передача данных в запросы
        \n•\tКласс <b>Cursor</b> и обход результатов запроса (коллекции или выборки данных)
        \n•\tНеобходимость закрытия базы данных после завершения работы с ней
        \n\t<b>Практическая часть</b></string>
    <string name="homework005">Home Work on 03.04.2022</string>
    <string name="mni_aviasales">Aviasales</string>
    <string name="mni_hospital">Hospital</string>
    <string name="mni_animation">Animation</string>
    <string name="mni_about">About</string>
    <string name="mni_data">Data</string>
    <string name="mni_time">Time</string>
</resources>