<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mniJSONaviasales"
        android:title="@string/mni_aviasales" />
    <item
        android:id="@+id/mniJSONhospital"
        android:title="@string/mni_hospital" />
    <item
        android:id="@+id/mniAnimation"
        android:title="@string/mni_animation" />
    <item
        android:id="@+id/mniAbout"
        android:title="@string/mni_about" />
    <item
        android:id="@+id/mniReturn"
        android:title="@string/mni_return" />

    <item
        android:id="@+id/mniData"
        android:title="@string/mni_data"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mniTime"
        android:title="@string/mni_time"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mniExit"
        android:title="@string/mni_exit"
        android:icon="@drawable/door_out"
        app:showAsAction="always"/>
</menu>