<?xml version="1.0" encoding="utf-8"?>
<!-- меню для использования в двух активностях  -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mniSortDescPrice"
        android:title="@string/mni_sort_desc_price"
        android:icon="@mipmap/ic_sortascaz_round"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mniSortSize"
        android:title="@string/mni_sort_size"
        android:icon="@mipmap/ic_sortasc_round"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mniSortManufacturer"
        android:title="@string/mni_sort_manufacturer"
        android:icon="@mipmap/ic_sort_round"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mniBack"
        android:icon="@drawable/arrow_left"
        android:title="@string/btn_back"
        app:showAsAction="always" />
</menu>