<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homework002.MainActivityHW002"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework002"
            android:layout_gravity="left|center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/homework002_text"
            android:gravity="fill"
            />
        <TextView
            android:id="@+id/txvExercises001"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/HW002_exercises001"
            android:gravity="fill"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/HW002_exercises001_text"
            android:gravity="fill"
            />
        <TextView
            android:id="@+id/txvExercises002"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/HW002_exercises002"
            android:gravity="fill"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/HW002_exercises002_text"
            android:gravity="fill"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnGoToExercises001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_GoToHW002_Exercises001"
                    />
                <Button
                    android:id="@+id/btnGoToExercises002"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_GoToHW002_Exercises002"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>
