<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework005.MainActivityHW005">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/homework005" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/llButton"
        android:layout_below="@+id/llTitle">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="fill"
                        android:text="@string/homework005_text" />

                    <TextView
                        android:id="@+id/txvExercises001"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="fill"
                        android:text="@string/HW005_exercises001" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="fill"
                        android:text="@string/HW005_exercises001_text" />

                    <TextView
                        android:id="@+id/txvExercises002"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="fill"
                        android:text="@string/HW005_exercises002" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="fill"
                        android:text="@string/HW005_exercises002_text" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGoToExercises001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_GoToHW005_Exercises001" />

        <Button
            android:id="@+id/btnGoToExercises002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_GoToHW005_Exercises002" />

        <Button
            android:id="@+id/btnReturnToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_ReturnToMain" />
    </LinearLayout>

</RelativeLayout>
